--- a/.gitignore
+++ b/.gitignore
@@ -111,4 +111,5 @@ test/security_tests/security_test_local_config.json
 /test/event_tests/event_test_slave_udp.json
 /install*/*
 .vscode
+/boost_1_71_0*/*
 
